Fix static and template dir resolution

--- a/aqimon/templates/index.html
+++ b/aqimon/templates/index.html
@@ -2,6 +2,7 @@
 
     <head>
         <title>AQI Reading</title>
+        <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
@@ -42,7 +43,7 @@
     </head>
 
     <body>
-        <div class="page-header bg-light text-center h1">Tim & Julie's Kickass AQI Monitor</div>
+        <div class="page-header bg-light text-center h1">AQI Monitor</div>
         <div id="alert-banner" class="alert alert-danger text-center" role="alert">
             <h4 class="alert-heading">Reader Failed To Start</h4>
             <div id="alert-exception"></div>
